masuk ke footer

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -4,6 +4,7 @@
 @import './components/Featured.scss';
 @import './components/FeaturedProperties.scss';
 @import './components/PropertyList.scss';
+@import './components/Footer.scss';
 @import './components/MailList.scss';
 
 // pages
