selesai search card di bitung

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -6,6 +6,9 @@
 @import './components/PropertyList.scss';
 @import './components/Footer.scss';
 @import './components/MailList.scss';
+@import './components/ListSearch.scss';
+@import './components/BtnComp.scss';
 
 // pages
 @import './pages/HomePage.scss';
+@import './pages/ListPage.scss';
