--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -7,6 +7,7 @@
 @import './components/Footer.scss';
 @import './components/MailList.scss';
 @import './components/ListSearch.scss';
+@import './components/SearchItem.scss';
 @import './components/BtnComp.scss';
 
 // pages
